force-app/main/default/objects/FAQ_Entry_Version__c/FAQ_Entry_Version__c.object-meta.xml
<CustomObject>
    <description>Immutable audit snapshot of an FAQ Entry&apos;s response/status at each edit or approval, for legal defensibility (US72-9).</description>
    <label>FAQ Entry Version</label>
    <nameField>
        <displayFormat>FAQV-{0000}</displayFormat>
        <label>Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Entry Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>