force-app/main/default/objects/FAQ_Entry_Version__c/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <description>When this change was made.</description>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>