force-app/main/default/objects/FAQ_Entry_Version__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who made this change.</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>FAQ Entry Versions</relationshipLabel>
    <relationshipName>FAQ_Entry_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>