force-app/main/default/objects/FAQ_Entry_Version__c/fields/FAQ_Entry__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The entry this snapshot belongs to.</description>
    <label>FAQ Entry</label>
    <referenceTo>FAQ_Entry__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <type>Lookup</type>
</CustomField>