force-app/main/default/objects/FAQ_Entry_Version__c/fields/Recommended_Response__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Response__c</fullName>
    <description>The response text as it was at this version.</description>
    <label>Recommended Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>