force-app/main/default/objects/FAQ_Entry_Version__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Entry status at this version (Draft/Approved/Retired).</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>