force-app/main/default/objects/FAQ_Entry_Version__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version number captured.</description>
    <label>Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>